# ifrit

./: .buildroot.config  .builroot.config  .linux.config  Cargo.toml  Makefile  README.md
.cargo/: config
capsules/: README.md
capsules/logger/: Cargo.toml
capsules/logger/src/: lib.rs
capsules/ripnet/: Cargo.toml
capsules/ripnet/src/: lib.rs
capsules/ripnet/src/bpf/: generic_file_open.bpf.c  vmlinux.h
ifrit-core/: Cargo.toml
ifrit-core/src/: event_bus.rs  lib.rs  module.rs
ifrit-net/: Cargo.toml
ifrit-net/src/: lib.rs
spec/: EventBus.tla  ModuleLifecycle.tla  README.md
src/: main.rs
