[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
ifrit-net = { workspace = true }
ifrit-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
