[package]
name = "ripnet"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.11.0"
pnet = "0.33.0"
ifrit-net = { workspace = true }
ifrit-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
